Fixed scrollbar

--- a/music_controller/frontend/static/css/index.css
+++ b/music_controller/frontend/static/css/index.css
@@ -7,21 +7,36 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  /* overflow-y: scroll !important; */
+  overflow-y: auto !important;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-section {
+  flex: 1;
+  overflow-y: auto !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 #main {
-  position: fixed;
+  width: 100%;
+  height: auto; /* hopefully allows us to scroll */
+  /* position: fixed;
   width: 100%;
   height: 100%;
   left: 0;
-  top: 0;
+  top: 0; */
 }
 
 #app {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .center {
@@ -76,11 +91,7 @@ body {
 
 .width-100 {
   width: 100%;
-  /* overflow-y: scroll !important; */
-}
-
-.scrollable-section {
-  /* height: 100; */
+  overflow-y: auto !important;
 }
 
 .full-width {
